amf-cli/shared/src/test/resources/parser-results/raml/error/inline-non-mutable-ref/lib2.raml
#%RAML Library
types:
  A:
    properties:
      a: string